--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <script src="script.js"></script>
-    <title>Tài liệu ô tô</title>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 
+    <script src="vi_dieu_khien/vi_dieu_khien.js"></script>
+    <script src="script.js"></script>
+
+    <title>Tài liệu ô tô</title>
 </head>
 
 <body>
@@ -21,7 +24,7 @@
 
         <div class="left-content">
             <ul class="menu">
-                <li data-page="tong_quan.html">Giới thiệu</li>
+                <li data-page="vi_dieu_khien.html">Vi điều khiển</li>
                 <li data-page="dong_co.html">Động cơ</li>
                 <li data-page="he_thong_khoi_dong.html">Hệ thống khởi động</li>
                 <li data-page="he_thong_danh_lua.html">Hệ thống đánh lửa</li>
