--- a/index.html
+++ b/index.html
@@ -17,10 +17,13 @@
 <body>
 
     <div class="header">
-        <h1>Tài liệu ô tô</h1>
+        <div style="display:flex;align-items: center;">
+            <img src="/imgs/car_logo_3.png" alt="AutoCode Logo" style="height: 50px; width: auto;">
+            <h1>Điện tử ô tô</h1>
+        </div>
     </div>
 
-    <div class="content">
+    <div class=" content">
 
         <div class="left-content">
             <ul class="menu">
@@ -53,9 +56,9 @@
 
     </div>
 
-    <div class="footer">
-        <p>Khoa điện - điện tử</p>
-    </div>
+    <!-- <div class="footer">
+        <p>Lâm Du Đạt - Email: datld@donga.edu.vn</p>
+    </div> -->
 
 </body>
 
