--- a/pages/vi_dieu_khien.html
+++ b/pages/vi_dieu_khien.html
@@ -1,8 +1,8 @@
-<h3 class="header_2">Vi điều khiển ô tô</h3>
+<h2 class="header_2">Vi điều khiển ô tô</h2>
 
-<div id="slide-controls" style="margin:10px; text-align:center">
+<div id="slide-controls" style="margin:10px; text-align:center; background-color:#1A1A1B;">
     <button id="btn-prev" style="padding: 8px 15px;">❮ Trước</button>
-    <span id="slide-counter" style="margin: 0 10px; font-weight: bold;"></span>
+    <span id="slide-counter" style="margin: 0 10px; font-weight: bold; color:white"></span>
     <button id="btn-next" style="padding: 8px 15px;">Sau ❯</button>
 </div>
 
