--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <div class="header">
         <div style="display:flex;align-items: center;">
-            <img src="/imgs/car_logo_3.png" alt="AutoCode Logo" style="height: 50px; width: auto;">
+            <img src="./imgs/car_logo_3.png" alt="AutoCode Logo" style="height: 50px; width: auto;">
             <h1>Điện tử ô tô</h1>
         </div>
     </div>
