--- a/pages/vi_dieu_khien.html
+++ b/pages/vi_dieu_khien.html
@@ -18,7 +18,7 @@
                 Bài 1: Tổng quan vi điều khiên</li>
 
             <li data-index1="1" data-dir="vi_dieu_khien">
-                Bài 2: Arduino</li>
+                Bài 2: Hệ đếm và link kiện điện tử</li>
         </ul>
     </div>
 
