--- a/pages/vi_dieu_khien.html
+++ b/pages/vi_dieu_khien.html
@@ -19,6 +19,12 @@
 
             <li data-index1="1" data-dir="vi_dieu_khien">
                 Bài 2: Hệ đếm và link kiện điện tử</li>
+
+            <li data-index1="2" data-dir="vi_dieu_khien">
+                Bài 3: Kiến trúc Arduino</li>
+
+            <li data-index1="3" data-dir="vi_dieu_khien">
+                Bài 4: Lập trình Arduino</li>
         </ul>
     </div>
 
