--- a/pages/can_bus.html
+++ b/pages/can_bus.html
@@ -1,13 +1,14 @@
-<div class="video-resource">
+<div class="content-wrapper">
+    <div class="video-resource">
 
-    <div>
-        <h2>hệ thống Can lin bus</h2>
-        <div style="display:flex">
-            <iframe src="https://www.youtube.com/embed/smbP3WYHLGs?list=PL4thAF2GC1yuz3VwrT5JjlY0UcN7L8L1L"
-                allowfullscreen></iframe>
+        <div>
+            <h2>hệ thống Can lin bus</h2>
+            <div style="display:flex">
+                <iframe src="https://www.youtube.com/embed/smbP3WYHLGs?list=PL4thAF2GC1yuz3VwrT5JjlY0UcN7L8L1L"
+                    allowfullscreen></iframe>
 
-            <div>
-                <!-- <ul>
+                <div>
+                    <!-- <ul>
                     <li>Cảm biến tốc độ động cơ, vị trí pitong</li>
                     <li>Cảm biến lưu lượng gió</li>
                     <li>Cảm biến vị trí bướm gas</li>
@@ -16,10 +17,9 @@
                     <li>ECU</li>
                     <li>bô bin đánh lửa</li>
                 </ul> -->
+                </div>
             </div>
         </div>
+
     </div>
-
-
-
 </div>
