--- a/pages/dong_co_phun_dau_dien_tu.html
+++ b/pages/dong_co_phun_dau_dien_tu.html
@@ -1,4 +1,4 @@
-<div>
+<div class="content-wrapper">
     <h2>Động cơ phun dầu điện tử</h2>
     <div style="display:flex">
         <iframe src="https://www.youtube.com/embed/SaDSeziLtWk?list=PL4thAF2GC1ytZnSZOo3sHJAzITB11QhY8"
