--- a/pages/he_thong_dieu_khien_dong_co.html
+++ b/pages/he_thong_dieu_khien_dong_co.html
@@ -1,13 +1,14 @@
-<div class="video-resource">
+<div class="content-wrapper">
+    <div class="video-resource">
 
-    <div>
-        <h2>Hệ thống điều khiển động cơ</h2>
-        <div style="display:flex">
-            <iframe src="https://www.youtube.com/embed/1PLT7B7bvJU?list=PL4thAF2GC1yvyqDgYQWmSr6_bR_EhBHJ9"
-                allowfullscreen></iframe>
+        <div>
+            <h2>Hệ thống điều khiển động cơ</h2>
+            <div style="display:flex">
+                <iframe src="https://www.youtube.com/embed/1PLT7B7bvJU?list=PL4thAF2GC1yvyqDgYQWmSr6_bR_EhBHJ9"
+                    allowfullscreen></iframe>
 
-            <div>
-                <!-- <ul>
+                <div>
+                    <!-- <ul>
                     <li>Cảm biến tốc độ động cơ, vị trí pitong</li>
                     <li>Cảm biến lưu lượng gió</li>
                     <li>Cảm biến vị trí bướm gas</li>
@@ -16,18 +17,18 @@
                     <li>ECU</li>
                     <li>bô bin đánh lửa</li>
                 </ul> -->
+                </div>
             </div>
         </div>
-    </div>
 
-    <div>
-        <h2>Cổng OBD</h2>
-        <div style="display:flex">
-            <iframe src="https://www.youtube.com/embed/ 2Zt5p-G-jQM?list=PL4thAF2GC1yvyqDgYQWmSr6_bR_EhBHJ9"
-                allowfullscreen></iframe>
+        <div>
+            <h2>Cổng OBD</h2>
+            <div style="display:flex">
+                <iframe src="https://www.youtube.com/embed/ 2Zt5p-G-jQM?list=PL4thAF2GC1yvyqDgYQWmSr6_bR_EhBHJ9"
+                    allowfullscreen></iframe>
 
-            <div>
-                <!-- <ul>
+                <div>
+                    <!-- <ul>
                     <li>Cảm biến tốc độ động cơ, vị trí pitong</li>
                     <li>Cảm biến lưu lượng gió</li>
                     <li>Cảm biến vị trí bướm gas</li>
@@ -36,18 +37,18 @@
                     <li>ECU</li>
                     <li>bô bin đánh lửa</li>
                 </ul> -->
+                </div>
             </div>
         </div>
-    </div>
 
-    <div>
-        <h2>Xe khó khởi động ?</h2>
-        <div style="display:flex">
-            <iframe src="https://www.youtube.com/embed/neW_mhnSUys?list=PL4thAF2GC1yvyqDgYQWmSr6_bR_EhBHJ9"
-                allowfullscreen></iframe>
+        <div>
+            <h2>Xe khó khởi động ?</h2>
+            <div style="display:flex">
+                <iframe src="https://www.youtube.com/embed/neW_mhnSUys?list=PL4thAF2GC1yvyqDgYQWmSr6_bR_EhBHJ9"
+                    allowfullscreen></iframe>
 
-            <div>
-                <!-- <ul>
+                <div>
+                    <!-- <ul>
                     <li>Cảm biến tốc độ động cơ, vị trí pitong</li>
                     <li>Cảm biến lưu lượng gió</li>
                     <li>Cảm biến vị trí bướm gas</li>
@@ -56,19 +57,19 @@
                     <li>ECU</li>
                     <li>bô bin đánh lửa</li>
                 </ul> -->
+                </div>
             </div>
         </div>
-    </div>
 
 
-    <div>
-        <h2>Cách chẩn đoán, đọc lỗi qua cổng OBD II</h2>
-        <div style="display:flex">
-            <iframe src="https://www.youtube.com/embed/bhY66EbHRyQ?list=PL4thAF2GC1yvyqDgYQWmSr6_bR_EhBHJ9"
-                allowfullscreen></iframe>
+        <div>
+            <h2>Cách chẩn đoán, đọc lỗi qua cổng OBD II</h2>
+            <div style="display:flex">
+                <iframe src="https://www.youtube.com/embed/bhY66EbHRyQ?list=PL4thAF2GC1yvyqDgYQWmSr6_bR_EhBHJ9"
+                    allowfullscreen></iframe>
 
-            <div>
-                <!-- <ul>
+                <div>
+                    <!-- <ul>
                     <li>Cảm biến tốc độ động cơ, vị trí pitong</li>
                     <li>Cảm biến lưu lượng gió</li>
                     <li>Cảm biến vị trí bướm gas</li>
@@ -77,18 +78,18 @@
                     <li>ECU</li>
                     <li>bô bin đánh lửa</li>
                 </ul> -->
+                </div>
             </div>
         </div>
-    </div>
 
-    <div>
-        <h2>Cảm biến</h2>
-        <div style="display:flex">
-            <iframe src="https://www.youtube.com/embed/92bZTCP-d3c?list=PL4thAF2GC1yvyqDgYQWmSr6_bR_EhBHJ9"
-                allowfullscreen></iframe>
+        <div>
+            <h2>Cảm biến</h2>
+            <div style="display:flex">
+                <iframe src="https://www.youtube.com/embed/92bZTCP-d3c?list=PL4thAF2GC1yvyqDgYQWmSr6_bR_EhBHJ9"
+                    allowfullscreen></iframe>
 
-            <div>
-                <!-- <ul>
+                <div>
+                    <!-- <ul>
                     <li>Cảm biến tốc độ động cơ, vị trí pitong</li>
                     <li>Cảm biến lưu lượng gió</li>
                     <li>Cảm biến vị trí bướm gas</li>
@@ -97,18 +98,18 @@
                     <li>ECU</li>
                     <li>bô bin đánh lửa</li>
                 </ul> -->
+                </div>
             </div>
         </div>
-    </div>
 
-    <div>
-        <h2>Cảm biến tốc độ , vị trí pittong</h2>
-        <div style="display:flex">
-            <iframe src="https://www.youtube.com/embed/GSuNmV7pChA?list=PL4thAF2GC1yvvvLtLqSDjyhlPWA5dHFeT"
-                allowfullscreen></iframe>
+        <div>
+            <h2>Cảm biến tốc độ , vị trí pittong</h2>
+            <div style="display:flex">
+                <iframe src="https://www.youtube.com/embed/GSuNmV7pChA?list=PL4thAF2GC1yvvvLtLqSDjyhlPWA5dHFeT"
+                    allowfullscreen></iframe>
 
-            <div>
-                <!-- <ul>
+                <div>
+                    <!-- <ul>
                     <li>Cảm biến tốc độ động cơ, vị trí pitong</li>
                     <li>Cảm biến lưu lượng gió</li>
                     <li>Cảm biến vị trí bướm gas</li>
@@ -117,9 +118,10 @@
                     <li>ECU</li>
                     <li>bô bin đánh lửa</li>
                 </ul> -->
+                </div>
             </div>
         </div>
+
+
     </div>
-
-
 </div>
