--- a/pages/he_thong_lai_tro_luc.html
+++ b/pages/he_thong_lai_tro_luc.html
@@ -1,13 +1,14 @@
-<div class="video-resource">
+<div class="content-wrapper">
+    <div class="video-resource">
 
-    <div>
-        <h2>Hệ thống trợ lực</h2>
-        <div style="display:flex">
-            <iframe src="https://www.youtube.com/embed/6W9QEB5CZRE?list=PL4thAF2GC1ytZnSZOo3sHJAzITB11QhY8"
-                allowfullscreen></iframe>
+        <div>
+            <h2>Hệ thống trợ lực</h2>
+            <div style="display:flex">
+                <iframe src="https://www.youtube.com/embed/6W9QEB5CZRE?list=PL4thAF2GC1ytZnSZOo3sHJAzITB11QhY8"
+                    allowfullscreen></iframe>
 
-            <div>
-                <!-- <ul>
+                <div>
+                    <!-- <ul>
                     <li>Cảm biến tốc độ động cơ, vị trí pitong</li>
                     <li>Cảm biến lưu lượng gió</li>
                     <li>Cảm biến vị trí bướm gas</li>
@@ -16,18 +17,18 @@
                     <li>ECU</li>
                     <li>bô bin đánh lửa</li>
                 </ul> -->
+                </div>
             </div>
         </div>
-    </div>
 
-    <div>
-        <h2>Thông số hệ thống trợ trợ lực</h2>
-        <div style="display:flex">
-            <iframe src="https://www.youtube.com/embed/VRzY8jXmrAU?list=PL4thAF2GC1ytZnSZOo3sHJAzITB11QhY8"
-                allowfullscreen></iframe>
+        <div>
+            <h2>Thông số hệ thống trợ trợ lực</h2>
+            <div style="display:flex">
+                <iframe src="https://www.youtube.com/embed/VRzY8jXmrAU?list=PL4thAF2GC1ytZnSZOo3sHJAzITB11QhY8"
+                    allowfullscreen></iframe>
 
-            <div>
-                <!-- <ul>
+                <div>
+                    <!-- <ul>
                     <li>Cảm biến tốc độ động cơ, vị trí pitong</li>
                     <li>Cảm biến lưu lượng gió</li>
                     <li>Cảm biến vị trí bướm gas</li>
@@ -36,8 +37,9 @@
                     <li>ECU</li>
                     <li>bô bin đánh lửa</li>
                 </ul> -->
+                </div>
             </div>
         </div>
-    </div>
 
+    </div>
 </div>
