--- a/pages/he_thong_phanh.html
+++ b/pages/he_thong_phanh.html
@@ -1,12 +1,13 @@
-<div class="video-resource">
+<div class="content-wrapper">
+    <div class="video-resource">
 
-    <div>
-        <h2>Cấu tạo hệ thống phanh thủy lực</h2>
-        <div style="display:flex">
-            <iframe src="https://www.youtube.com/embed/7gTtc5oADxs?t=48s" allowfullscreen></iframe>
+        <div>
+            <h2>Cấu tạo hệ thống phanh thủy lực</h2>
+            <div style="display:flex">
+                <iframe src="https://www.youtube.com/embed/7gTtc5oADxs?t=48s" allowfullscreen></iframe>
 
-            <div>
-                <!-- <ul>
+                <div>
+                    <!-- <ul>
                     <li>Cảm biến tốc độ động cơ, vị trí pitong</li>
                     <li>Cảm biến lưu lượng gió</li>
                     <li>Cảm biến vị trí bướm gas</li>
@@ -15,17 +16,17 @@
                     <li>ECU</li>
                     <li>bô bin đánh lửa</li>
                 </ul> -->
+                </div>
             </div>
         </div>
-    </div>
 
-    <div>
-        <h2>Cấu tạo hệ thống phanh khí nén</h2>
-        <div style="display:flex">
-            <iframe src="https://www.youtube.com/embed/3QqIk_iUpqE" allowfullscreen></iframe>
+        <div>
+            <h2>Cấu tạo hệ thống phanh khí nén</h2>
+            <div style="display:flex">
+                <iframe src="https://www.youtube.com/embed/3QqIk_iUpqE" allowfullscreen></iframe>
 
-            <div>
-                <!-- <ul>
+                <div>
+                    <!-- <ul>
                     <li>Cảm biến tốc độ động cơ, vị trí pitong</li>
                     <li>Cảm biến lưu lượng gió</li>
                     <li>Cảm biến vị trí bướm gas</li>
@@ -34,17 +35,17 @@
                     <li>ECU</li>
                     <li>bô bin đánh lửa</li>
                 </ul> -->
+                </div>
             </div>
         </div>
-    </div>
 
-    <div>
-        <h2>Hoạt động của hệ thống phanh khí nén</h2>
-        <div style="display:flex">
-            <iframe src="https://www.youtube.com/embed/iNx0fqK54ts" allowfullscreen></iframe>
+        <div>
+            <h2>Hoạt động của hệ thống phanh khí nén</h2>
+            <div style="display:flex">
+                <iframe src="https://www.youtube.com/embed/iNx0fqK54ts" allowfullscreen></iframe>
 
-            <div>
-                <!-- <ul>
+                <div>
+                    <!-- <ul>
                     <li>Cảm biến tốc độ động cơ, vị trí pitong</li>
                     <li>Cảm biến lưu lượng gió</li>
                     <li>Cảm biến vị trí bướm gas</li>
@@ -53,17 +54,17 @@
                     <li>ECU</li>
                     <li>bô bin đánh lửa</li>
                 </ul> -->
+                </div>
             </div>
         </div>
-    </div>
 
-    <div>
-        <h2>Dầu phanh</h2>
-        <div style="display:flex">
-            <iframe src="https://www.youtube.com/embed/Um1Cwiru5IU" allowfullscreen></iframe>
+        <div>
+            <h2>Dầu phanh</h2>
+            <div style="display:flex">
+                <iframe src="https://www.youtube.com/embed/Um1Cwiru5IU" allowfullscreen></iframe>
 
-            <div>
-                <!-- <ul>
+                <div>
+                    <!-- <ul>
                     <li>Cảm biến tốc độ động cơ, vị trí pitong</li>
                     <li>Cảm biến lưu lượng gió</li>
                     <li>Cảm biến vị trí bướm gas</li>
@@ -72,9 +73,10 @@
                     <li>ECU</li>
                     <li>bô bin đánh lửa</li>
                 </ul> -->
+                </div>
             </div>
         </div>
+
+
     </div>
-
-
 </div>
