--- a/pages/o_khoa_dien.html
+++ b/pages/o_khoa_dien.html
@@ -1,13 +1,14 @@
-<div class="video-resource">
+<div class="content-wrapper">
+    <div class="video-resource">
 
-    <div>
-        <h2>Ổ khóa điện ô tô</h2>
-        <div style="display:flex">
-            <iframe src="https://www.youtube.com/embed/2lXYshEcvTM?list=PL4thAF2GC1ytZnSZOo3sHJAzITB11QhY8"
-                allowfullscreen></iframe>
+        <div>
+            <h2>Ổ khóa điện ô tô</h2>
+            <div style="display:flex">
+                <iframe src="https://www.youtube.com/embed/2lXYshEcvTM?list=PL4thAF2GC1ytZnSZOo3sHJAzITB11QhY8"
+                    allowfullscreen></iframe>
 
-            <div>
-                <!-- <ul>
+                <div>
+                    <!-- <ul>
                     <li>Cảm biến tốc độ động cơ, vị trí pitong</li>
                     <li>Cảm biến lưu lượng gió</li>
                     <li>Cảm biến vị trí bướm gas</li>
@@ -16,10 +17,11 @@
                     <li>ECU</li>
                     <li>bô bin đánh lửa</li>
                 </ul> -->
+                </div>
             </div>
         </div>
+
+
+
     </div>
-
-
-
 </div>
