--- a/pages/vi_dieu_khien.html
+++ b/pages/vi_dieu_khien.html
@@ -1,31 +1,45 @@
-<h2 class="header_2">Vi điều khiển ô tô</h2>
+<!-- <h2 class="vdk-header">Vi điều khiển ô tô</h2> -->
 
-<div id="slide-controls" style="margin:10px; text-align:center; background-color:#1A1A1B;">
-    <button id="btn-prev" style="padding: 8px 15px;">❮ Trước</button>
-    <span id="slide-counter" style="margin: 0 10px; font-weight: bold; color:white"></span>
-    <button id="btn-next" style="padding: 8px 15px;">Sau ❯</button>
-</div>
+<div class="vdk-content">
 
-<div class="content" style="margin:10px">
-
-    <div class="center-content" id="js-center-content-1">
+    <div class="vdk-center-content" id="js-center-content-1">
 
     </div>
 
-    <div class="left-content">
+    <div class="vdk-left-content">
         <ul class="menu">
             <li data-index1="0" data-dir="vi_dieu_khien">
-                Bài 1: Tổng quan vi điều khiên</li>
+                <p>Bài 1: Tổng quan vi điều khiên</p>
+                <ul class="menu-2">
+                    <li>Mục tiêu và chuẩn đầu ra</li>
+                    <li>Vi xử lý và vi điều khiển</li>
+                    <li>Các dòng vi điều khiẻn</li>
+                    <li>Cách sử dụng vi điều khiển</li>
+                    <li>Phần mềm và tool</li>
+                    <li>Cấu trúc chương trình vi điều khiển</li>
+                </ul>
+            </li>
 
             <li data-index1="1" data-dir="vi_dieu_khien">
-                Bài 2: Hệ đếm và link kiện điện tử</li>
+                Bài 2: Hệ đếm và linh kiện điện tử</li>
 
             <li data-index1="2" data-dir="vi_dieu_khien">
                 Bài 3: Kiến trúc Arduino</li>
 
             <li data-index1="3" data-dir="vi_dieu_khien">
-                Bài 4: Lập trình Arduino</li>
+                <p>Bài 4: Lập trình Arduino</p>
+                <ul class="menu-2">
+                    <li>1. Mục tiêu và chuẩn đầu ra</li>
+                    <li>2. Cài đặt Protues</li>
+                </ul>
+            </li>
         </ul>
     </div>
 
+</div>
+
+<div id="slide-controls">
+    <button id="btn-prev" style="padding: 8px 15px;">❮ Trước</button>
+    <span id="slide-counter" style="margin: 0 10px; font-weight: bold; color:white"></span>
+    <button id="btn-next" style="padding: 8px 15px;">Sau ❯</button>
 </div>
