--- a/index.html
+++ b/index.html
@@ -18,45 +18,47 @@
 
     <div class="header">
         <div style="display:flex;align-items: center;">
-            <img src="./imgs/car_logo_3.png" alt="AutoCode Logo" style="height: 50px; width: auto;">
+            <img src="./imgs/car_logo_3.png" alt="AutoCode Logo" ">
             <h1>Điện tử ô tô</h1>
         </div>
     </div>
 
     <div class=" content">
 
-        <div class="left-content">
-            <ul class="menu">
-                <li data-page="vi_dieu_khien.html">Vi điều khiển</li>
-                <li data-page="dong_co.html">Động cơ</li>
-                <li data-page="he_thong_khoi_dong.html">Hệ thống khởi động</li>
-                <li data-page="he_thong_danh_lua.html">Hệ thống đánh lửa</li>
-                <li data-page="he_thong_lai_tro_luc.html">Hệ thống lái trợ lực</li>
-                <li data-page="he_thong_tui_khi.html">Hệ thống túi khí</li>
-                <li data-page="dai_an_toan.html">Hệ thống đai an toàn</li>
-                <li data-page="he_thong_phanh.html">Hệ thống phanh</li>
-                <li data-page="he_thong_truyen_luc.html">Hệ thống truyền lực</li>
-                <li data-page="he_thong_gat_nuoc.html">Hệ thống gạt nước</li>
-                <li data-page="o_khoa_dien.html">Ổ khóa điện</li>
-                <li data-page="he_thong_dieu_hoa.html">Hệ thống điều hòa</li>
-                <li data-page="van_egr.html">Van EGR</li>
-                <li data-page="he_thong_lam_mat.html">Hệ thống làm mát động cơ</li>
-                <li data-page="bo_che_hoa_khi.html">Bộ chế hòa khí</li>
-                <li data-page="dong_co_phun_dau_dien_tu.html">Động cơ phun dầu điện tử</li>
-                <li data-page="he_thong_phun_dau.html">Hệ thống phun dầu điện tử</li>
-                <li data-page="he_thong_dieu_khien_dong_co.html">Hệ thống điều khiển động cơ</li>
-                <li data-page="he_thong_dien_than_xe.html">Hệ thống điện thân xe</li>
-                <li data-page="can_bus.html">Hệ thống can bus</li>
-            </ul>
+            <div class="left-content">
+                <ul class="menu">
+                    <li data-page="vi_dieu_khien.html">Vi điều khiển</li>
+                    <li data-page="dong_co.html">Động cơ</li>
+                    <li data-page="he_thong_khoi_dong.html">Hệ thống khởi động</li>
+                    <li data-page="he_thong_danh_lua.html">Hệ thống đánh lửa</li>
+                    <li data-page="he_thong_lai_tro_luc.html">Hệ thống lái trợ lực</li>
+                    <li data-page="he_thong_tui_khi.html">Hệ thống túi khí</li>
+                    <li data-page="dai_an_toan.html">Hệ thống đai an toàn</li>
+                    <li data-page="he_thong_phanh.html">Hệ thống phanh</li>
+                    <li data-page="he_thong_truyen_luc.html">Hệ thống truyền lực</li>
+                    <li data-page="he_thong_gat_nuoc.html">Hệ thống gạt nước</li>
+                    <li data-page="o_khoa_dien.html">Ổ khóa điện</li>
+                    <li data-page="he_thong_dieu_hoa.html">Hệ thống điều hòa</li>
+                    <li data-page="van_egr.html">Van EGR</li>
+                    <li data-page="he_thong_lam_mat.html">Hệ thống làm mát động cơ</li>
+                    <li data-page="bo_che_hoa_khi.html">Bộ chế hòa khí</li>
+                    <li data-page="dong_co_phun_dau_dien_tu.html">Động cơ phun dầu điện tử</li>
+                    <li data-page="he_thong_phun_dau.html">Hệ thống phun dầu điện tử</li>
+                    <li data-page="he_thong_dieu_khien_dong_co.html">Hệ thống điều khiển động cơ</li>
+                    <li data-page="he_thong_dien_than_xe.html">Hệ thống điện thân xe</li>
+                    <li data-page="can_bus.html">Hệ thống can bus</li>
+                </ul>
+            </div>
+
+            <div class="center-content" id="js-center-content">
+                <div id="sub-center-content">
+                    <p>sub-content-center</p>
+                </div>
+            </div>
+
         </div>
 
-        <div class="center-content" id="js-center-content">
-            <p>center</p>
-        </div>
-
-    </div>
-
-    <!-- <div class="footer">
+        <!-- <div class="footer">
         <p>Lâm Du Đạt - Email: datld@donga.edu.vn</p>
     </div> -->
 
