--- a/pages/bo_che_hoa_khi.html
+++ b/pages/bo_che_hoa_khi.html
@@ -1,13 +1,14 @@
-<div class="video-resource">
+<div class="content-wrapper">
+    <div class="video-resource">
 
-    <div>
-        <h2>Bộ chế hòa khí</h2>
-        <div style="display:flex">
-            <iframe src="https://www.youtube.com/embed/wtpuAQY7bk?list=PL4thAF2GC1ytZnSZOo3sHJAzITB11QhY8"
-                allowfullscreen></iframe>
+        <div>
+            <h2>Bộ chế hòa khí</h2>
+            <div style="display:flex">
+                <iframe src="https://www.youtube.com/embed/wtpuAQY7bk?list=PL4thAF2GC1ytZnSZOo3sHJAzITB11QhY8"
+                    allowfullscreen></iframe>
 
-            <div>
-                <!-- <ul>
+                <div>
+                    <!-- <ul>
                     <li>Cảm biến tốc độ động cơ, vị trí pitong</li>
                     <li>Cảm biến lưu lượng gió</li>
                     <li>Cảm biến vị trí bướm gas</li>
@@ -16,19 +17,19 @@
                     <li>ECU</li>
                     <li>bô bin đánh lửa</li>
                 </ul> -->
+                </div>
             </div>
         </div>
-    </div>
 
 
-    <div>
-        <h2>Hoạt đông bộ chế hòa khí</h2>
-        <div style="display:flex">
-            <iframe src="https://www.youtube.com/embed/F4hUkqIc6Rg?list=PL4thAF2GC1ytZnSZOo3sHJAzITB11QhY8"
-                allowfullscreen></iframe>
+        <div>
+            <h2>Hoạt đông bộ chế hòa khí</h2>
+            <div style="display:flex">
+                <iframe src="https://www.youtube.com/embed/F4hUkqIc6Rg?list=PL4thAF2GC1ytZnSZOo3sHJAzITB11QhY8"
+                    allowfullscreen></iframe>
 
-            <div>
-                <!-- <ul>
+                <div>
+                    <!-- <ul>
                     <li>Cảm biến tốc độ động cơ, vị trí pitong</li>
                     <li>Cảm biến lưu lượng gió</li>
                     <li>Cảm biến vị trí bướm gas</li>
@@ -37,8 +38,9 @@
                     <li>ECU</li>
                     <li>bô bin đánh lửa</li>
                 </ul> -->
+                </div>
             </div>
         </div>
-    </div>
 
+    </div>
 </div>
