--- a/pages/he_thong_dien_than_xe.html
+++ b/pages/he_thong_dien_than_xe.html
@@ -1,13 +1,14 @@
-<div class="video-resource">
+<div class="content-wrapper">
+    <div class="video-resource">
 
-    <div>
-        <h2>Tổng quan hệ thống</h2>
-        <div style="display:flex">
-            <iframe src="https://www.youtube.com/embed/3PJxFAkI3is?list=PL4thAF2GC1yvQZlvviY5Ona0lxPwXoX9y"
-                allowfullscreen></iframe>
+        <div>
+            <h2>Tổng quan hệ thống</h2>
+            <div style="display:flex">
+                <iframe src="https://www.youtube.com/embed/3PJxFAkI3is?list=PL4thAF2GC1yvQZlvviY5Ona0lxPwXoX9y"
+                    allowfullscreen></iframe>
 
-            <div>
-                <!-- <ul>
+                <div>
+                    <!-- <ul>
                     <li>Cảm biến tốc độ động cơ, vị trí pitong</li>
                     <li>Cảm biến lưu lượng gió</li>
                     <li>Cảm biến vị trí bướm gas</li>
@@ -16,18 +17,18 @@
                     <li>ECU</li>
                     <li>bô bin đánh lửa</li>
                 </ul> -->
+                </div>
             </div>
         </div>
-    </div>
 
-    <div>
-        <h2>Hệ thống chiếu sáng tự động </h2>
-        <div style="display:flex">
-            <iframe src="https://www.youtube.com/embed/8Xq_Ju_S1V4?list=PL4thAF2GC1yvQZlvviY5Ona0lxPwXoX9y"
-                allowfullscreen></iframe>
+        <div>
+            <h2>Hệ thống chiếu sáng tự động </h2>
+            <div style="display:flex">
+                <iframe src="https://www.youtube.com/embed/8Xq_Ju_S1V4?list=PL4thAF2GC1yvQZlvviY5Ona0lxPwXoX9y"
+                    allowfullscreen></iframe>
 
-            <div>
-                <!-- <ul>
+                <div>
+                    <!-- <ul>
                     <li>Cảm biến tốc độ động cơ, vị trí pitong</li>
                     <li>Cảm biến lưu lượng gió</li>
                     <li>Cảm biến vị trí bướm gas</li>
@@ -36,19 +37,19 @@
                     <li>ECU</li>
                     <li>bô bin đánh lửa</li>
                 </ul> -->
+                </div>
             </div>
         </div>
-    </div>
 
 
-    <div>
-        <h2>Đèn chiếu sáng</h2>
-        <div style="display:flex">
-            <iframe src="https://www.youtube.com/embed/tsAnEb1dVjU?list=PL4thAF2GC1yvQZlvviY5Ona0lxPwXoX9y"
-                allowfullscreen></iframe>
+        <div>
+            <h2>Đèn chiếu sáng</h2>
+            <div style="display:flex">
+                <iframe src="https://www.youtube.com/embed/tsAnEb1dVjU?list=PL4thAF2GC1yvQZlvviY5Ona0lxPwXoX9y"
+                    allowfullscreen></iframe>
 
-            <div>
-                <!-- <ul>
+                <div>
+                    <!-- <ul>
                     <li>Cảm biến tốc độ động cơ, vị trí pitong</li>
                     <li>Cảm biến lưu lượng gió</li>
                     <li>Cảm biến vị trí bướm gas</li>
@@ -57,18 +58,18 @@
                     <li>ECU</li>
                     <li>bô bin đánh lửa</li>
                 </ul> -->
+                </div>
             </div>
         </div>
-    </div>
 
-    <div>
-        <h2>Đèn chiếu sáng 2</h2>
-        <div style="display:flex">
-            <iframe src="https://www.youtube.com/embed/huOkDu2nyMs?list=PL4thAF2GC1yvQZlvviY5Ona0lxPwXoX9y"
-                allowfullscreen></iframe>
+        <div>
+            <h2>Đèn chiếu sáng 2</h2>
+            <div style="display:flex">
+                <iframe src="https://www.youtube.com/embed/huOkDu2nyMs?list=PL4thAF2GC1yvQZlvviY5Ona0lxPwXoX9y"
+                    allowfullscreen></iframe>
 
-            <div>
-                <!-- <ul>
+                <div>
+                    <!-- <ul>
                     <li>Cảm biến tốc độ động cơ, vị trí pitong</li>
                     <li>Cảm biến lưu lượng gió</li>
                     <li>Cảm biến vị trí bướm gas</li>
@@ -77,18 +78,18 @@
                     <li>ECU</li>
                     <li>bô bin đánh lửa</li>
                 </ul> -->
+                </div>
             </div>
         </div>
-    </div>
 
-    <div>
-        <h2>Đèn chiếu sáng 3</h2>
-        <div style="display:flex">
-            <iframe src="https://www.youtube.com/embed/ukBm75TwBTQ?list=PL4thAF2GC1yvQZlvviY5Ona0lxPwXoX9y"
-                allowfullscreen></iframe>
+        <div>
+            <h2>Đèn chiếu sáng 3</h2>
+            <div style="display:flex">
+                <iframe src="https://www.youtube.com/embed/ukBm75TwBTQ?list=PL4thAF2GC1yvQZlvviY5Ona0lxPwXoX9y"
+                    allowfullscreen></iframe>
 
-            <div>
-                <!-- <ul>
+                <div>
+                    <!-- <ul>
                     <li>Cảm biến tốc độ động cơ, vị trí pitong</li>
                     <li>Cảm biến lưu lượng gió</li>
                     <li>Cảm biến vị trí bướm gas</li>
@@ -97,19 +98,19 @@
                     <li>ECU</li>
                     <li>bô bin đánh lửa</li>
                 </ul> -->
+                </div>
             </div>
         </div>
-    </div>
 
 
-    <div>
-        <h2>Cấu tạo đuôi đèn</h2>
-        <div style="display:flex">
-            <iframe src="https://www.youtube.com/embed/SDRL75ZNA34?list=PL4thAF2GC1yvQZlvviY5Ona0lxPwXoX9y"
-                allowfullscreen></iframe>
+        <div>
+            <h2>Cấu tạo đuôi đèn</h2>
+            <div style="display:flex">
+                <iframe src="https://www.youtube.com/embed/SDRL75ZNA34?list=PL4thAF2GC1yvQZlvviY5Ona0lxPwXoX9y"
+                    allowfullscreen></iframe>
 
-            <div>
-                <!-- <ul>
+                <div>
+                    <!-- <ul>
                     <li>Cảm biến tốc độ động cơ, vị trí pitong</li>
                     <li>Cảm biến lưu lượng gió</li>
                     <li>Cảm biến vị trí bướm gas</li>
@@ -118,9 +119,10 @@
                     <li>ECU</li>
                     <li>bô bin đánh lửa</li>
                 </ul> -->
+                </div>
             </div>
         </div>
+
+
     </div>
-
-
 </div>
