--- a/pages/he_thong_dieu_hoa.html
+++ b/pages/he_thong_dieu_hoa.html
@@ -1,13 +1,14 @@
-<div class="video-resource">
+<div class="content-wrapper">
+    <div class="video-resource">
 
-    <div>
-        <h2>Hệ điều hòa không khí</h2>
-        <div style="display:flex">
-            <iframe src="https://www.youtube.com/embed/wnDPUa7kACA?list=PL4thAF2GC1ytZnSZOo3sHJAzITB11QhY8"
-                allowfullscreen></iframe>
+        <div>
+            <h2>Hệ điều hòa không khí</h2>
+            <div style="display:flex">
+                <iframe src="https://www.youtube.com/embed/wnDPUa7kACA?list=PL4thAF2GC1ytZnSZOo3sHJAzITB11QhY8"
+                    allowfullscreen></iframe>
 
-            <div>
-                <!-- <ul>
+                <div>
+                    <!-- <ul>
                     <li>Cảm biến tốc độ động cơ, vị trí pitong</li>
                     <li>Cảm biến lưu lượng gió</li>
                     <li>Cảm biến vị trí bướm gas</li>
@@ -16,19 +17,19 @@
                     <li>ECU</li>
                     <li>bô bin đánh lửa</li>
                 </ul> -->
+                </div>
             </div>
         </div>
-    </div>
 
 
-    <div>
-        <h2>Cấu tạo máy nén</h2>
-        <div style="display:flex">
-            <iframe src="https://www.youtube.com/embed/86uYjfVhqFw?list=PL4thAF2GC1ytZnSZOo3sHJAzITB11QhY8"
-                allowfullscreen></iframe>
+        <div>
+            <h2>Cấu tạo máy nén</h2>
+            <div style="display:flex">
+                <iframe src="https://www.youtube.com/embed/86uYjfVhqFw?list=PL4thAF2GC1ytZnSZOo3sHJAzITB11QhY8"
+                    allowfullscreen></iframe>
 
-            <div>
-                <!-- <ul>
+                <div>
+                    <!-- <ul>
                     <li>Cảm biến tốc độ động cơ, vị trí pitong</li>
                     <li>Cảm biến lưu lượng gió</li>
                     <li>Cảm biến vị trí bướm gas</li>
@@ -37,10 +38,11 @@
                     <li>ECU</li>
                     <li>bô bin đánh lửa</li>
                 </ul> -->
+                </div>
             </div>
         </div>
+
+
+
     </div>
-
-
-
 </div>
