--- a/pages/he_thong_lam_mat.html
+++ b/pages/he_thong_lam_mat.html
@@ -1,12 +1,13 @@
-<div class="video-resource">
+<div class="content-wrapper">
+    <div class="video-resource">
 
-    <div>
-        <h2>Hệ thống làm mát động cơ</h2>
-        <div style="display:flex">
-            <iframe src="https://www.youtube.com/embed/ioo2BQE98wE" allowfullscreen></iframe>
+        <div>
+            <h2>Hệ thống làm mát động cơ</h2>
+            <div style="display:flex">
+                <iframe src="https://www.youtube.com/embed/ioo2BQE98wE" allowfullscreen></iframe>
 
-            <div>
-                <!-- <ul>
+                <div>
+                    <!-- <ul>
                     <li>Cảm biến tốc độ động cơ, vị trí pitong</li>
                     <li>Cảm biến lưu lượng gió</li>
                     <li>Cảm biến vị trí bướm gas</li>
@@ -15,17 +16,17 @@
                     <li>ECU</li>
                     <li>bô bin đánh lửa</li>
                 </ul> -->
+                </div>
             </div>
         </div>
-    </div>
 
-    <div>
-        <h2>Dung dịch nước làm mát- điểm sôi</h2>
-        <div style="display:flex">
-            <iframe src="https://www.youtube.com/embed/2E_NqhdWct0" allowfullscreen></iframe>
+        <div>
+            <h2>Dung dịch nước làm mát- điểm sôi</h2>
+            <div style="display:flex">
+                <iframe src="https://www.youtube.com/embed/2E_NqhdWct0" allowfullscreen></iframe>
 
-            <div>
-                <!-- <ul>
+                <div>
+                    <!-- <ul>
                     <li>Cảm biến tốc độ động cơ, vị trí pitong</li>
                     <li>Cảm biến lưu lượng gió</li>
                     <li>Cảm biến vị trí bướm gas</li>
@@ -34,18 +35,18 @@
                     <li>ECU</li>
                     <li>bô bin đánh lửa</li>
                 </ul> -->
+                </div>
             </div>
         </div>
-    </div>
 
 
-    <div>
-        <h2>Dung dịch nước làm mát - điểm đóng băng</h2>
-        <div style="display:flex">
-            <iframe src="https://www.youtube.com/embed/pdkxD0FUUhc" allowfullscreen></iframe>
+        <div>
+            <h2>Dung dịch nước làm mát - điểm đóng băng</h2>
+            <div style="display:flex">
+                <iframe src="https://www.youtube.com/embed/pdkxD0FUUhc" allowfullscreen></iframe>
 
-            <div>
-                <!-- <ul>
+                <div>
+                    <!-- <ul>
                     <li>Cảm biến tốc độ động cơ, vị trí pitong</li>
                     <li>Cảm biến lưu lượng gió</li>
                     <li>Cảm biến vị trí bướm gas</li>
@@ -54,11 +55,8 @@
                     <li>ECU</li>
                     <li>bô bin đánh lửa</li>
                 </ul> -->
+                </div>
             </div>
         </div>
     </div>
-
-
-
-
 </div>
