--- a/pages/he_thong_phun_dau.html
+++ b/pages/he_thong_phun_dau.html
@@ -1,13 +1,14 @@
-<div class="video-resource">
+<div class="content-wrapper">
+    <div class="video-resource">
 
-    <div>
-        <h2>Hệ thống phun dầu- CRDI</h2>
-        <div style="display:flex">
-            <iframe src="https://www.youtube.com/embed/03RTQ0HzZ2g?list=PL4thAF2GC1ytZnSZOo3sHJAzITB11QhY8"
-                allowfullscreen></iframe>
+        <div>
+            <h2>Hệ thống phun dầu- CRDI</h2>
+            <div style="display:flex">
+                <iframe src="https://www.youtube.com/embed/03RTQ0HzZ2g?list=PL4thAF2GC1ytZnSZOo3sHJAzITB11QhY8"
+                    allowfullscreen></iframe>
 
-            <div>
-                <!-- <ul>
+                <div>
+                    <!-- <ul>
                     <li>Cảm biến tốc độ động cơ, vị trí pitong</li>
                     <li>Cảm biến lưu lượng gió</li>
                     <li>Cảm biến vị trí bướm gas</li>
@@ -16,19 +17,19 @@
                     <li>ECU</li>
                     <li>bô bin đánh lửa</li>
                 </ul> -->
+                </div>
             </div>
         </div>
-    </div>
 
 
-    <div>
-        <h2>Hệ thống phun dầu - Nhiên liệu</h2>
-        <div style="display:flex">
-            <iframe src="https://www.youtube.com/embed/qP6JWjeCls4?list=PL4thAF2GC1ytZnSZOo3sHJAzITB11QhY8"
-                allowfullscreen></iframe>
+        <div>
+            <h2>Hệ thống phun dầu - Nhiên liệu</h2>
+            <div style="display:flex">
+                <iframe src="https://www.youtube.com/embed/qP6JWjeCls4?list=PL4thAF2GC1ytZnSZOo3sHJAzITB11QhY8"
+                    allowfullscreen></iframe>
 
-            <div>
-                <!-- <ul>
+                <div>
+                    <!-- <ul>
                     <li>Cảm biến tốc độ động cơ, vị trí pitong</li>
                     <li>Cảm biến lưu lượng gió</li>
                     <li>Cảm biến vị trí bướm gas</li>
@@ -37,18 +38,18 @@
                     <li>ECU</li>
                     <li>bô bin đánh lửa</li>
                 </ul> -->
+                </div>
             </div>
         </div>
-    </div>
 
-    <div>
-        <h2>Hệ thống phun dầu - Vòi phun</h2>
-        <div style="display:flex">
-            <iframe src="https://www.youtube.com/embed/h5DeHgmdGfo?list=PL4thAF2GC1ytZnSZOo3sHJAzITB11QhY8"
-                allowfullscreen></iframe>
+        <div>
+            <h2>Hệ thống phun dầu - Vòi phun</h2>
+            <div style="display:flex">
+                <iframe src="https://www.youtube.com/embed/h5DeHgmdGfo?list=PL4thAF2GC1ytZnSZOo3sHJAzITB11QhY8"
+                    allowfullscreen></iframe>
 
-            <div>
-                <!-- <ul>
+                <div>
+                    <!-- <ul>
                     <li>Cảm biến tốc độ động cơ, vị trí pitong</li>
                     <li>Cảm biến lưu lượng gió</li>
                     <li>Cảm biến vị trí bướm gas</li>
@@ -57,9 +58,9 @@
                     <li>ECU</li>
                     <li>bô bin đánh lửa</li>
                 </ul> -->
+                </div>
             </div>
         </div>
+
     </div>
-
-
 </div>
