--- a/pages/vi_dieu_khien.html
+++ b/pages/vi_dieu_khien.html
@@ -21,7 +21,14 @@
             </li>
 
             <li data-index1="1" data-dir="vi_dieu_khien">
-                Bài 2: Hệ đếm và linh kiện điện tử</li>
+                <p>Bài 2: Hệ đếm và linh kiện điện tử</p>
+                <ul class="menu-2">
+                    <li>Mục tiêu và chuẩn đầu ra</li>
+                    <li>Hệ đếm</li>
+                    <li>Điện tử số</li>
+                    <li>Link kiện điện tử</li>
+                </ul>
+            </li>
 
             <li data-index1="2" data-dir="vi_dieu_khien">
                 Bài 3: Kiến trúc Arduino</li>
@@ -31,6 +38,7 @@
                 <ul class="menu-2">
                     <li>1. Mục tiêu và chuẩn đầu ra</li>
                     <li>2. Cài đặt Protues</li>
+                    <li>3. Ngôn ngữ lập trình</li>
                 </ul>
             </li>
         </ul>
