--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github.min.css">
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/languages/c.min.js"></script>
+
     <script src="vi_dieu_khien/vi_dieu_khien.js"></script>
     <script src="script.js"></script>
 
@@ -61,6 +66,16 @@
         <!-- <div class="footer">
         <p>Lâm Du Đạt - Email: datld@donga.edu.vn</p>
     </div> -->
+
+        <script>
+            marked.setOptions({
+                highlight: function (code, lang) {
+                    const language = (lang && hljs.getLanguage(lang)) ? lang : 'c';
+                    return hljs.highlight(code, { language }).value;
+                },
+                langPrefix: 'hljs language-'
+            });
+        </script>
 
 </body>
 
