--- a/pages/vi_dieu_khien.html
+++ b/pages/vi_dieu_khien.html
@@ -39,6 +39,7 @@
                     <li>1. Mục tiêu và chuẩn đầu ra</li>
                     <li>2. Cài đặt Protues</li>
                     <li>3. Ngôn ngữ lập trình</li>
+                    <li>4. Biến và khối gán</li>
                 </ul>
             </li>
         </ul>
