--- a/pages/vi_dieu_khien.html
+++ b/pages/vi_dieu_khien.html
@@ -40,6 +40,7 @@
                     <li>2. Cài đặt Protues</li>
                     <li>3. Ngôn ngữ lập trình</li>
                     <li>4. Biến và khối gán</li>
+                    <li>5. Câu điều kiện và khối ra quyết định</li>
                 </ul>
             </li>
         </ul>
