--- a/pages/vi_dieu_khien.html
+++ b/pages/vi_dieu_khien.html
@@ -41,6 +41,7 @@
                     <li>3. Ngôn ngữ lập trình</li>
                     <li>4. Biến và khối gán</li>
                     <li>5. Câu điều kiện và khối ra quyết định</li>
+                    <li>6. Vòng lặp và khối lặp</li>
                 </ul>
             </li>
         </ul>
