--- a/pages/vi_dieu_khien.html
+++ b/pages/vi_dieu_khien.html
@@ -1,12 +1,17 @@
 <!-- <h2 class="vdk-header">Vi điều khiển ô tô</h2> -->
 
+<div class="header">
+    <div class="header-title">Vi điều khiên ô tô</div>
+    <button class="btn-nav" onclick="toggleRight()">Buổi học ☰</button>
+</div>
+
 <div class="vdk-content">
 
     <div class="vdk-center-content" id="js-center-content-1">
 
     </div>
 
-    <div class="vdk-left-content">
+    <div class="vdk-right-content right-menu">
         <ul class="menu">
             <li data-index1="0" data-dir="vi_dieu_khien">
                 <p>Bài 1: Tổng quan vi điều khiên</p>
@@ -50,7 +55,7 @@
 </div>
 
 <div id="slide-controls">
-    <button id="btn-prev" style="padding: 8px 15px;">❮ Trước</button>
-    <span id="slide-counter" style="margin: 0 10px; font-weight: bold; color:white"></span>
-    <button id="btn-next" style="padding: 8px 15px;">Sau ❯</button>
+    <button id="btn-prev">❮ Trước</button>
+    <span id="slide-counter">Trang 6 / 6</span>
+    <button id="btn-next">Sau ❯</button>
 </div>
