--- a/pages/dong_co.html
+++ b/pages/dong_co.html
@@ -1,39 +1,49 @@
-<div class="content-wrapper">
-    <div class="video-resource">
-        <div>
-            <h2>Cấu tạo động cơ phun xăng hiện đại</h2>
-            <div style="display:flex">
+<div class="header">
+    <div class="header-title">Động cơ</div>
+    <!-- <button class="btn-nav" onclick="toggleRight()">Buổi học ☰</button> -->
+</div>
+
+<div class="page-content">
+    <div class="page-center-content">
+        <div class="slide-container">
+
+            <div class="video-lab">
+                <h2 class="title-lab">Cấu tạo động cơ phun xăng hiện đại</h2>
+                <div class="content-lab">
+                    <p>
+                        - puli trục khuỷu</br>
+                        - Trục cam</br>
+                        - van nạp xả</br>
+                        - puli máy bơm nước hệ thống làm mát</br>
+                        - puli máy phát</br>
+                        - puli máy điều hòa</br>
+                    </p>
+
+                </div>
                 <iframe src="https://www.youtube.com/embed/wyO-wXFh7KA?list=PL4thAF2GC1ytZnSZOo3sHJAzITB11QhY8"
                     allowfullscreen></iframe>
-                <div>
-                    <ul>
-                        <li>puli trục khuỷu</li>
-                        <li>Trục cam</li>
-                        <li>van nạp xả</li>
-                        <li>puli máy bơm nước hệ thống làm mát</li>
-                        <li>puli máy phát</li>
-                        <li>puli máy điều hòa</li>
-                    </ul>
-                </div>
             </div>
-        </div>
 
-        <div>
-            <h2>Trục cam (camshaft)</h2>
-            <iframe src="https://www.youtube.com/embed/JltyAGStsSU" allowfullscreen></iframe>
-        </div>
+            <div class="video-lab">
+                <h2 class="title-lab">Trục cam (camshaft)<h2>
+                        <div class="content-lab">
+                        </div>
+                        <iframe src="https://www.youtube.com/embed/JltyAGStsSU" allowfullscreen></iframe>
+            </div>
 
+            <div class="video-lab">
+                <h2 class="title-lab">Van nạp xả<h2>
+                        <div class="content-lab">
+                        </div>
+                        <iframe src="https://www.youtube.com/embed/LEY--IM7EOI?si=icA0exh1Uqq74FJn"
+                            allowfullscreen></iframe>
+            </div>
 
-        <div>
-            <h2>Van nạp xả</h2>
-            <iframe src="https://www.youtube.com/embed/LEY--IM7EOI?si=icA0exh1Uqq74FJn" allowfullscreen></iframe>
+            <hr>
+            <img src="/imgs/image1.png">
+            <img src="/imgs/image2.png">
+
         </div>
 
     </div>
-
-    <div class="image-resource">
-        <img src="/imgs/image1.png">
-        <img src="/imgs/image2.png">
-    </div>
-
 </div>
